# context-kernel-system

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  opencode.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: opsx-apply.agent.md  opsx-archive.agent.md  opsx-document.agent.md  opsx-propose.agent.md  opsx-verify.agent.md
.github/prompts/: opsx-document.prompt.md  opsx-verify.prompt.md
.github/skills/openspec-document/: SKILL.md
.github/skills/openspec-verify/: SKILL.md
.opencode/agents/: backend-builder.md  context-architect.md  evaluator.md  memory-architect.md  orchestrator.md  planner.md  retrieval-architect.md  sleep-time-worker.md
.opencode/skills/architecture-review/: SKILL.md
.opencode/skills/context-assembly-design/: SKILL.md
.opencode/skills/docs-update/: SKILL.md
.opencode/skills/memory-policy-design/: SKILL.md
.opencode/skills/module-implementation/: SKILL.md
.opencode/skills/rag-retrieval-design/: SKILL.md
.opencode/skills/repo-intake/: SKILL.md
.opencode/skills/test-strategy/: SKILL.md
apps/api/: README.md
apps/api/app/: config.py  limiter.py  main.py
apps/api/tests/: test_api.py  test_api_structure.py  test_rate_limit.py
apps/worker/tests/: test_worker.py
apps/worker/worker/: main.py  models.py
context_kernel_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/adr/: ADR-001-python-fastapi.md  ADR-002-postgres-pgvector.md  ADR-003-langgraph-orchestrator.md  ADR-004-mcp-boundary.md  ADR-005-rate-limiting-chat.md  ADR-006-local-llm-axonium-adapter.md
docs/architecture/: context-map.md  runtime-flows.md  storage-model.md
docs/vision/: glossary.md  invariants.md  system-overview.md
examples/: 01_storage_state_smoke.py  02_memory_retrieval_smoke.py  03_context_observability_smoke.py  04_model_tool_runtime_smoke.py  05_orchestrator_direct.py  06_api_worker_e2e.py  07_axonium_e2e.py  session-example.md
openspec/: AGENTS.md
openspec/changes/e2e-example-scenarios/: design.md  proposal.md
openspec/changes/retrieval-db-wiring/: design.md  proposal.md  tasks.md
openspec/specs/api-layer/: spec.md
openspec/specs/background-worker/: spec.md
openspec/specs/layered-memory/: spec.md
openspec/specs/orchestrator-dag/: spec.md
prompts/summaries/: compaction_template.md
tests/: test_e2e_smoke.py  test_import_boundaries.py
(+26 files in other folders)
