[project]
name = "context-kernel-system"
version = "0.1.0"
description = "Context Kernel es a modular runtime for stateful AI Systems: context assembly, layered memory, retrieval, tool orchestration, and sleep-time consolidation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    # Orchestration DAG
    "langgraph>=0.1.0",
    # API layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",          # async HTTP client for MCP gateway
    # Data validation
    "pydantic>=2.0.0",
    # Storage / DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.6.0",
    # Tokenisation
    "tiktoken>=0.6.0",
    # Observability (optional — graceful import failures throughout)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    # Rate limiting
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Tests are run per-package to avoid sys.path conflicts.
# Use: python3 -m pytest packages/<pkg>/tests/ -v

[tool.setuptools.packages.find]
where = ["packages", "apps"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default argument
    "UP007",  # Optional[X] vs X | None — needed for Python 3.9 compat
    "UP045",  # X | None vs Optional[X] — same reason
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E402"]     # assert + late imports allowed in tests
"**/tests/**" = ["S101", "E402"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
no_implicit_reexport = false
exclude = [
    "tests/",
    "apps/api/tests/",
    "apps/worker/tests/",
    "packages/.*/tests/",
]

